fix: AutoSchedulingService and NotificationService compilation errors and stability improvements
- Fixed ZoneId.from() incorrect usage in AutoSchedulingService (lines 87, 88, 134, 135)
- Fixed circular reference in NotificationService @Value annotation
- Removed unused ZoneId import from AutoSchedulingService
- Injected Clock bean for timezone-aware operations (America/Chicago)
- Optimized ShiftService.autoCancelExpiringTradesAndPosts() with targeted query
- Added Flyway migrations (V1__initial_schema.sql, V2__insert_default_data.sql)
- Configured DataInitializer to run only in dev profile
- Replaced hardcoded CORS origins with ALLOWED_ORIGINS env variable
- Externalized notification URLs to NOTIFICATION_BASE_URL
- Removed @CrossOrigin annotations from all controllers (9 files)
- Updated README with Java 21 and comprehensive environment variables